// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Default renders correctly 1`] = `
<jest>
  <video
    aria-label="Big Buck Bunny - Video"
    class="ecl-video"
    controls=""
    poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
  >
    <source
      src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      type="video/mp4"
    />
    <source
      src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
      type="video/webm"
    />
    <track
      kind="captions"
      label="English"
      src="/captions/bunny-en.vtt"
      srclang="en"
    />
    <track
      kind="captions"
      label="French"
      src="/captions/bunny-fr.vtt"
      srclang="fr"
    />
  </video>
</jest>
`;

exports[`Video Default renders correctly with extra attributes 1`] = `
<jest>
  <video
    aria-label="Big Buck Bunny - Video"
    class="ecl-video"
    controls=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
  >
    <source
      src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      type="video/mp4"
    />
    <source
      src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
      type="video/webm"
    />
    <track
      kind="captions"
      label="English"
      src="/captions/bunny-en.vtt"
      srclang="en"
    />
    <track
      kind="captions"
      label="French"
      src="/captions/bunny-fr.vtt"
      srclang="fr"
    />
  </video>
</jest>
`;

exports[`Video Default renders correctly with extra class names 1`] = `
<jest>
  <video
    aria-label="Big Buck Bunny - Video"
    class="ecl-video custom-class--video"
    controls=""
    poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
  >
    <source
      src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.mp4"
      type="video/mp4"
    />
    <source
      src="https://inno-ecl.s3.amazonaws.com/media/videos/big_buck_bunny.webm"
      type="video/webm"
    />
    <track
      kind="captions"
      label="English"
      src="/captions/bunny-en.vtt"
      srclang="en"
    />
    <track
      kind="captions"
      label="French"
      src="/captions/bunny-fr.vtt"
      srclang="fr"
    />
  </video>
</jest>
`;
